# Artifact

./: .dockerignore  .gitignore  ARTIFACT-APPENDIX.md  CLAUDE.md  Ctxt_patched.h  DOCKER.md  DOCKER_SETUP_SUMMARY.txt  Dockerfile  EVALUATION_GUIDE.md  LICENSE  README.md  build_all.sh  check_benchmark_status.sh  docker-compose.yml  run_docker_evaluation.sh  run_full_benchmarks.sh  run_quick_tests.sh  run_remaining_benchmarks.sh  test_docker_quick.sh  test_status_tracking.sh  verify_environment.sh
encoding_switching/: CMakeLists.txt  README.md
encoding_switching/src/: Ctxt_ext.cpp  bridge.cpp  database_aggregation.cpp  decision_tree.cpp  floyd_warshall.cpp  quick_all.cpp  quick_test.cpp  sorting.cpp  workload.cpp
rust/tfhe-example/: README.md
rust/tfhe-example/decision_tree/: Cargo.toml
rust/tfhe-example/decision_tree/src/: complexity_analysis.rs  lib.rs  main.rs  real_benchmark.rs  real_tree.rs  real_tree_benchmark.rs  verify_security.rs
rust/tfhe-example/floyd/: Cargo.toml  README.md
rust/tfhe-example/floyd/src/: complexity_analysis.rs  lib.rs  main.rs  real_benchmark.rs  real_floyd.rs  real_floyd_benchmark.rs
rust/tfhe-example/private_db/: Cargo.toml  README.md
rust/tfhe-example/private_db/src/: complexity_analysis.rs  lib.rs  main.rs  real_benchmark.rs  real_db_benchmark.rs  real_db_query.rs  security_params.rs  verify_security.rs
rust/tfhe-example/sorting/: Cargo.toml
rust/tfhe-example/sorting/src/: complexity_analysis.rs  lib.rs  main.rs  real_benchmark.rs  real_sorting.rs  real_sorting_benchmark.rs  verify_security.rs
rust/tfhe-example/workloads/: Cargo.toml
rust/tfhe-example/workloads/src/: main.rs
rust/tfhe-example/workloads/src/benchmarks/: mod.rs  workload1.rs  workload2.rs  workload3.rs
scheme_switching/: CMakeLists.txt  README.md
scheme_switching/src/: database_aggregation.cpp  decision_tree.cpp  floyd_warshall.cpp  quick_all.cpp  quick_test.cpp  sorting.cpp  test_basic.cpp  test_decision_tree_small.cpp  utils.cpp  utils.h  workload.cpp  workload.h
